kubernetes/istio/gateway.yaml
# Istio Gateway: entry point traffic dari luar cluster
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ecommerce-gateway
spec:
  selector:
    istio: ingressgateway   # Gunakan Istio ingress gateway default
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
